--- a/index.html
+++ b/index.html
@@ -19,12 +19,18 @@
     <header class="header">
         <div class="header__navigation container">
             <nav class="navigation">
-                <a href="./index.html" class="logo link"><span>Web</span>Studio</a>
+                <a href="./index.html" class="logo logo__navigation link"><span>Web</span>Studio</a>
                 <ul class="site-nav__list list">
                     <li class="site-nav__item"><a href="./index.html" class="site-nav__link link  current">Студия</a></li>
                     <li class="site-nav__item"><a href="./portfolio.html" class="site-nav__link link">Портфолио</a></li>
                     <li class="site-nav__item"><a href="./index.html" class="site-nav__link link">Контакты</a></li>
                 </ul>
+                <button class="burger" type="button" data-menu-button>
+                    <svg class="burger__icon" height="16" width="24">
+                        <use class="burger__menu" href="./images/icons.svg#menu"></use>
+                        <use class="burger__close" href="./images/icons.svg#close"></use>
+                    </svg>
+                </button>
             </nav>
             <ul class="contact-nav__list list">
                 <li class="contact-nav__item">
@@ -438,6 +444,26 @@
                 </div>
             </div>
         </div>
+        <div class="mobile-menu" data-menu>
+            <ul class="mobile-menu__nav__list list">
+                <li class="mobile-menu__nav__item"><a class="mobile-menu__nav__link current link" href="http://" target="_blank" rel="noopener noreferrer">Студия</a></li>
+                <li class="mobile-menu__nav__item"><a class="mobile-menu__nav__link link" href="http://" target="_blank" rel="noopener noreferrer">Портфолио</a></li>
+                <li class="mobile-menu__nav__item"><a class="mobile-menu__nav__link link" href="http://" target="_blank" rel="noopener noreferrer">Контакты</a></li>
+            </ul>
+
+            <ul class="mobile-menu__contacts__list list">
+                <li class="mobile-menu__contacts__item"><a class="mobile-menu__contacts__link link" href="tel:+380961111111" target="_blank" rel="noopener noreferrer">+38 096 111 11 11</a></li>
+                <li class="mobile-menu__contacts__item"><a class="mobile-menu__contacts__link link" href="mailto:info@devstudio.com" target="_blank" rel="noopener noreferrer">info@devstudio.com</a></li>
+            </ul>
+
+            <ul class="mobile-menu__social__list list">
+                <li class="mobile-menu__social__item"><a class="mobile-menu__social__link link" href="http://" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+                <li class="mobile-menu__social__item"><a class="mobile-menu__social__link link" href="http://" target="_blank" rel="noopener noreferrer">Twitter</a></li>
+                <li class="mobile-menu__social__item"><a class="mobile-menu__social__link link" href="http://" target="_blank" rel="noopener noreferrer">Facebook</a></li>
+                <li class="mobile-menu__social__item"><a class="mobile-menu__social__link link" href="http://" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+            </ul>
+        </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
 </body>
 </html>
