--- a/portfolio.html
+++ b/portfolio.html
@@ -19,12 +19,19 @@
     <header class="header">
         <div class="header__navigation container">
             <nav class="navigation">
-                <a href="./index.html" class="logo link"><span>Web</span>Studio</a>
+                <a href="./index.html" class="logo logo__navigation link"><span>Web</span>Studio</a>
                 <ul class="site-nav__list list">
-                    <li class="site-nav__item"><a href="./index.html" class="site-nav__link link">Студия</a></li>
+                    <li class="site-nav__item"><a href="./index.html" class="site-nav__link link">Студия</a>
+                    </li>
                     <li class="site-nav__item"><a href="./portfolio.html" class="site-nav__link link current">Портфолио</a></li>
                     <li class="site-nav__item"><a href="./index.html" class="site-nav__link link">Контакты</a></li>
                 </ul>
+                <button class="burger" type="button" data-menu-button>
+                    <svg class="burger__icon" height="16" width="24">
+                        <use class="burger__menu" href="./images/icons.svg#menu"></use>
+                        <use class="burger__close" href="./images/icons.svg#close"></use>
+                    </svg>
+                </button>
             </nav>
             <ul class="contact-nav__list list">
                 <li class="contact-nav__item">
@@ -63,7 +70,7 @@
                         <a class="works__link link" href="http://" target="_blank" rel="noopener noreferrer" >
                             <div class="overlay">
                                 <div class="overlay__thumb">
-                                <img src="./images/works/img-1.jpg" width="370" height="294" alt="Технокряк">
+                                <img src="./images/desktop/works/img-1.jpg" width="370" height="294" alt="Технокряк">
                                     <p class="overlay__description">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
                                         Все это позволит посетителю получить
                                         исчерпывающие сведения о компании или частном лице.
@@ -80,7 +87,7 @@
                         <a class="works__link link" href="http://" target="_blank" rel="noopener noreferrer">
                             <div class="overlay">
                                 <div class="overlay__thumb">
-                                <img src="./images/works/img-2.jpg" width="370" height="294" alt="Постер New Orlean vs Golden Star">
+                                <img src="./images/desktop/works/img-2.jpg" width="370" height="294" alt="Постер New Orlean vs Golden Star">
                                     <p class="overlay__description">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
                                         Все
                                         это позволит посетителю получить
@@ -98,7 +105,7 @@
                         <a class="works__link link" href="http://" target="_blank" rel="noopener noreferrer">
                             <div class="overlay">
                                 <div class="overlay__thumb">
-                                <img src="./images/works/img-3.jpg" width="370" height="294" alt="Ресторан Seafood">
+                                <img src="./images/desktop/works/img-3.jpg" width="370" height="294" alt="Ресторан Seafood">
                                     <p class="overlay__description">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
                                         Все
                                         это позволит посетителю получить
@@ -116,7 +123,7 @@
                         <a class="works__link link" href="http://" target="_blank" rel="noopener noreferrer">
                             <div class="overlay">
                                 <div class="overlay__thumb">
-                                <img src="./images/works/img-4.jpg" width="370" height="294" alt="Проект Prime">
+                                <img src="./images/desktop/works/img-4.jpg" width="370" height="294" alt="Проект Prime">
                                     <p class="overlay__description">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
                                         Все
                                         это позволит посетителю получить
@@ -134,7 +141,7 @@
                         <a class="works__link link" href="http://" target="_blank" rel="noopener noreferrer">
                             <div class="overlay">
                                 <div class="overlay__thumb">
-                                <img src="./images/works/img-5.jpg" width="370" height="294" alt="Проект Boxes">
+                                <img src="./images/desktop/works/img-5.jpg" width="370" height="294" alt="Проект Boxes">
                                     <p class="overlay__description">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
                                         Все
                                         это позволит посетителю получить
@@ -152,7 +159,7 @@
                         <a class="works__link link" href="http://" target="_blank" rel="noopener noreferrer">
                             <div class="overlay">
                                 <div class="overlay__thumb">
-                                <img src="./images/works/img-6.jpg" width="370" height="294" alt="Inspiration has no Borders">
+                                <img src="./images/desktop/works/img-6.jpg" width="370" height="294" alt="Inspiration has no Borders">
                                     <p class="overlay__description">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
                                         Все
                                         это позволит посетителю получить
@@ -170,7 +177,7 @@
                         <a class="works__link link" href="http://" target="_blank" rel="noopener noreferrer">
                             <div class="overlay">
                                 <div class="overlay__thumb">
-                                <img src="./images/works/img-7.jpg" width="370" height="294" alt="Издание Limited Edition">
+                                <img src="./images/desktop/works/img-7.jpg" width="370" height="294" alt="Издание Limited Edition">
                                     <p class="overlay__description">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
                                         Все
                                         это позволит посетителю получить
@@ -188,7 +195,7 @@
                         <a class="works__link link" href="http://" target="_blank" rel="noopener noreferrer">
                             <div class="overlay">
                                 <div class="overlay__thumb">
-                                <img src="./images/works/img-8.jpg" width="370" height="294" alt="Проект LAB">
+                                <img src="./images/desktop/works/img-8.jpg" width="370" height="294" alt="Проект LAB">
                                     <p class="overlay__description">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
                                         Все
                                         это позволит посетителю получить
@@ -206,7 +213,7 @@
                         <a class="works__link link" href="http://" target="_blank" rel="noopener noreferrer">
                             <div class="overlay">
                                 <div class="overlay__thumb">
-                                <img src="./images/works/img-9.jpg" width="370" height="294" alt="Growing Business">
+                                <img src="./images/desktop/works/img-9.jpg" width="370" height="294" alt="Growing Business">
                                     <p class="overlay__description">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
                                         Все
                                         это позволит посетителю получить
@@ -245,28 +252,32 @@
                 <h2 class="join__title title">Присоединяйтесь</h2>
                 <ul class="social__list list">
                     <li class="social__item">
-                        <a class="social__link join__link link" href="http://" target="_blank" rel="noopener noreferrer">
+                        <a class="social__link join__link link" href="http://" target="_blank"
+                            rel="noopener noreferrer">
                             <svg class="social__icon" height="20" width="20">
                                 <use href="./images/icons.svg#instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social__item">
-                        <a class="social__link join__link link" href="http://" target="_blank" rel="noopener noreferrer">
+                        <a class="social__link join__link link" href="http://" target="_blank"
+                            rel="noopener noreferrer">
                             <svg class="social__icon" height="20" width="20">
                                 <use href="./images/icons.svg#twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social__item">
-                        <a class="social__link join__link link" href="http://" target="_blank" rel="noopener noreferrer">
+                        <a class="social__link join__link link" href="http://" target="_blank"
+                            rel="noopener noreferrer">
                             <svg class="social__icon" height="20" width="20">
                                 <use href="./images/icons.svg#facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social__item">
-                        <a class="social__link join__link link" href="http://" target="_blank" rel="noopener noreferrer">
+                        <a class="social__link join__link link" href="http://" target="_blank"
+                            rel="noopener noreferrer">
                             <svg class="social__icon" height="20" width="20">
                                 <use href="./images/icons.svg#linkedin"></use>
                             </svg>
@@ -288,5 +299,33 @@
             </div>
         </div>
     </footer>
+
+    <div class="mobile-menu" data-menu>
+        <ul class="mobile-menu__nav__list list">
+            <li class="mobile-menu__nav__item"><a class="mobile-menu__nav__link link" href="./index.html">Студия</a></li>
+            <li class="mobile-menu__nav__item"><a class="mobile-menu__nav__link current link" href="./portfolio.html">Портфолио</a></li>
+            <li class="mobile-menu__nav__item"><a class="mobile-menu__nav__link link" href="http://">Контакты</a></li>
+        </ul>
+
+        <ul class="mobile-menu__contacts__list list">
+            <li class="mobile-menu__contacts__item"><a class="mobile-menu__contacts__link link" href="tel:+380961111111"
+                    target="_blank" rel="noopener noreferrer">+38 096 111 11 11</a></li>
+            <li class="mobile-menu__contacts__item"><a class="mobile-menu__contacts__link link"
+                    href="mailto:info@devstudio.com" target="_blank" rel="noopener noreferrer">info@devstudio.com</a>
+            </li>
+        </ul>
+
+        <ul class="mobile-menu__social__list list">
+            <li class="mobile-menu__social__item"><a class="mobile-menu__social__link link" href="http://"
+                    target="_blank" rel="noopener noreferrer">Instagram</a></li>
+            <li class="mobile-menu__social__item"><a class="mobile-menu__social__link link" href="http://"
+                    target="_blank" rel="noopener noreferrer">Twitter</a></li>
+            <li class="mobile-menu__social__item"><a class="mobile-menu__social__link link" href="http://"
+                    target="_blank" rel="noopener noreferrer">Facebook</a></li>
+            <li class="mobile-menu__social__item"><a class="mobile-menu__social__link link" href="http://"
+                    target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+        </ul>
+    </div>
+    <script src="./js/mobile-menu.js"></script>
 </body>
 </html>
