added for 480px

--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
     </div>
     <div class="mobile-menu" data-menu>
         <ul class="mobile-menu__nav__list list">
-            <li class="mobile-menu__nav__item"><a class="mobile-menu__nav__link current link" href="http://">Студия</a></li>
+            <li class="mobile-menu__nav__item"><a class="mobile-menu__nav__link current link" href="./index.html">Студия</a></li>
             <li class="mobile-menu__nav__item"><a class="mobile-menu__nav__link link" href="./portfolio.html">Портфолио</a></li>
             <li class="mobile-menu__nav__item"><a class="mobile-menu__nav__link link" href="http://">Контакты</a></li>
         </ul>
