fixes for 480px and start for tablet

--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,7 @@
                                 <div class="overlay__thumb">
                                     <picture>
                                         <source media="(min-width: 1200px)" srcset="./images/desktop/works/img-1.jpg" type="image/jpg">
-                                        <!-- <source media="(min-width: 768px)" srcset="./images/tablet/team/team-4_md.jpg 1x, ./images/tablet/team/team-4_md@2x.jpg 2x" type="image/jpg"> -->
+                                        <source media="(min-width: 768px)" srcset="./images/tablet/works/portfolio-1_sm.jpg 1x, ./images/tablet/works/portfolio-1_md@2x.jpg 2x" type="image/jpg">
                                         <source media="(max-width: 767px)" srcset="./images/mobile/works/portfolio-1_sm.jpg 1x, ./images/mobile/works/portfolio-1_sm@2x.jpg 2x" type="image/jpg">
                                         <img src="./images/desktop/works/img-1.jpg" alt="Технокряк">
                                     </picture>
@@ -94,7 +94,7 @@
                                 <div class="overlay__thumb">
                                     <picture>
                                         <source media="(min-width: 1200px)" srcset="./images/desktop/works/img-2.jpg" type="image/jpg">
-                                        <!-- <source media="(min-width: 768px)" srcset="./images/tablet/team/team-4_md.jpg 1x, ./images/tablet/team/team-4_md@2x.jpg 2x" type="image/jpg"> -->
+                                        <source media="(min-width: 768px)" srcset="./images/tablet/works/portfolio-2_md.jpg 1x, ./images/tablet/works/portfolio-2_md@2x.jpg 2x" type="image/jpg">
                                         <source media="(max-width: 767px)"
                                             srcset="./images/mobile/works/portfolio-2_sm.jpg 1x, ./images/mobile/works/portfolio-2_sm@2x.jpg 2x"
                                             type="image/jpg">
@@ -120,7 +120,7 @@
                                 <div class="overlay__thumb">
                                     <picture>
                                         <source media="(min-width: 1200px)" srcset="./images/desktop/works/img-3.jpg" type="image/jpg">
-                                        <!-- <source media="(min-width: 768px)" srcset="./images/tablet/works/portfolio-3_md.jpg 1x, ./images/tablet/works/portfolio-3_md@2x.jpg 2x" type="image/jpg"> -->
+                                        <source media="(min-width: 768px)" srcset="./images/tablet/works/portfolio-3_md.jpg 1x, ./images/tablet/works/portfolio-3_md@2x.jpg 2x" type="image/jpg">
                                         <source media="(max-width: 767px)"
                                             srcset="./images/mobile/works/portfolio-3_sm.jpg 1x, ./images/mobile/works/portfolio-3_sm@2x.jpg 2x"
                                             type="image/jpg">
@@ -147,7 +147,7 @@
                                 <div class="overlay__thumb">
                                     <picture>
                                         <source media="(min-width: 1200px)" srcset="./images/desktop/works/img-4.jpg" type="image/jpg">
-                                        <!-- <source media="(min-width: 768px)" srcset="./images/tablet/works/portfolio-4_md.jpg 1x, ./images/tablet/works/portfolio-4_md@2x.jpg 2x" type="image/jpg"> -->
+                                        <source media="(min-width: 768px)" srcset="./images/tablet/works/portfolio-4_md.jpg 1x, ./images/tablet/works/portfolio-4_md@2x.jpg 2x" type="image/jpg">
                                         <source media="(max-width: 767px)"
                                             srcset="./images/mobile/works/portfolio-4_sm.jpg 1x, ./images/mobile/works/portfolio-4_sm@2x.jpg 2x"
                                             type="image/jpg">
@@ -173,7 +173,7 @@
                                 <div class="overlay__thumb">
                                     <picture>
                                         <source media="(min-width: 1200px)" srcset="./images/desktop/works/img-5.jpg" type="image/jpg">
-                                        <!-- <source media="(min-width: 768px)" srcset="./images/tablet/works/portfolio-5_md.jpg 1x, ./images/tablet/works/portfolio-5_md@2x.jpg 2x" type="image/jpg"> -->
+                                        <source media="(min-width: 768px)" srcset="./images/tablet/works/portfolio-5_md.jpg 1x, ./images/tablet/works/portfolio-5_md@2x.jpg 2x" type="image/jpg">
                                         <source media="(max-width: 767px)"
                                             srcset="./images/mobile/works/portfolio-5_sm.jpg 1x, ./images/mobile/works/portfolio-5_sm@2x.jpg 2x"
                                             type="image/jpg">
@@ -199,7 +199,7 @@
                                 <div class="overlay__thumb">
                                     <picture>
                                         <source media="(min-width: 1200px)" srcset="./images/desktop/works/img-6.jpg" type="image/jpg">
-                                        <!-- <source media="(min-width: 768px)" srcset="./images/tablet/works/portfolio-6_md.jpg 1x, ./images/tablet/works/portfolio-6_md@2x.jpg 2x" type="image/jpg"> -->
+                                        <source media="(min-width: 768px)" srcset="./images/tablet/works/portfolio-6_md.jpg 1x, ./images/tablet/works/portfolio-6_md@2x.jpg 2x" type="image/jpg">
                                         <source media="(max-width: 767px)"
                                             srcset="./images/mobile/works/portfolio-6_sm.jpg 1x, ./images/mobile/works/portfolio-6_sm@2x.jpg 2x"
                                             type="image/jpg"> 
@@ -225,7 +225,7 @@
                                 <div class="overlay__thumb">
                                     <picture>
                                         <source media="(min-width: 1200px)" srcset="./images/desktop/works/img-7.jpg" type="image/jpg">
-                                        <!-- <source media="(min-width: 768px)" srcset="./images/tablet/works/portfolio-7_md.jpg 1x, ./images/tablet/works/portfolio-7_md@2x.jpg 2x" type="image/jpg"> -->
+                                        <source media="(min-width: 768px)" srcset="./images/tablet/works/portfolio-7_md.jpg 1x, ./images/tablet/works/portfolio-7_md@2x.jpg 2x" type="image/jpg">
                                         <source media="(max-width: 767px)"
                                             srcset="./images/mobile/works/portfolio-7_sm.jpg 1x, ./images/mobile/works/portfolio-7_sm@2x.jpg 2x"
                                             type="image/jpg"> 
@@ -251,7 +251,7 @@
                                 <div class="overlay__thumb">
                                     <picture>
                                         <source media="(min-width: 1200px)" srcset="./images/desktop/works/img-8.jpg" type="image/jpg">
-                                        <!-- <source media="(min-width: 768px)" srcset="./images/tablet/works/portfolio-8_md.jpg 1x, ./images/tablet/works/portfolio-8_md@2x.jpg 2x" type="image/jpg"> -->
+                                        <source media="(min-width: 768px)" srcset="./images/tablet/works/portfolio-8_md.jpg 1x, ./images/tablet/works/portfolio-8_md@2x.jpg 2x" type="image/jpg">
                                         <source media="(max-width: 767px)"
                                             srcset="./images/mobile/works/portfolio-8_sm.jpg 1x, ./images/mobile/works/portfolio-8_sm@2x.jpg 2x"
                                             type="image/jpg">  
@@ -277,7 +277,7 @@
                                 <div class="overlay__thumb">
                                     <picture>
                                         <source media="(min-width: 1200px)" srcset="./images/desktop/works/img-9.jpg" type="image/jpg">
-                                        <!-- <source media="(min-width: 768px)" srcset="./images/tablet/works/portfolio-9_md.jpg 1x, ./images/tablet/works/portfolio-9_md@2x.jpg 2x" type="image/jpg"> -->
+                                        <source media="(min-width: 768px)" srcset="./images/tablet/works/portfolio-9_md.jpg 1x, ./images/tablet/works/portfolio-9_md@2x.jpg 2x" type="image/jpg">
                                         <source media="(max-width: 767px)"
                                             srcset="./images/mobile/works/portfolio-9_sm.jpg 1x, ./images/mobile/works/portfolio-9_sm@2x.jpg 2x"
                                             type="image/jpg"> 
