--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <li class="teammate">
                         <picture>
                             <source media="(min-width: 1200px)" srcset="./images/desktop/team/team-1.jpg" type="image/jpg">
-                            <!-- <source media="(min-width: 768px)" srcset="./images/tablet/team/team-1_md.jpg 1x, ./images/tablet/team/team-1_md@2x.jpg 2x" type="image/jpg"> -->
+                            <source media="(min-width: 768px)" srcset="./images/tablet/team/team-1_md.jpg 1x, ./images/tablet/team/team-1_md@2x.jpg 2x" type="image/jpg">
                             <source media="(max-width: 767px)" srcset="./images/mobile/team/team-1_sm.jpg 1x, ./images/mobile/team/team-1_sm@2x.jpg 2x" type="image/jpg">
                             <img src="./images/desktop/team/team-1.jpg" alt="Игорь Демьяненко">
                         </picture>
@@ -187,7 +187,7 @@
                     <li class="teammate">
                         <picture>
                             <source media="(min-width: 1200px)" srcset="./images/desktop/team/team-2.jpg" type="image/jpg">
-                            <!-- <source media="(min-width: 768px)" srcset="./images/tablet/team/team-2_md.jpg 1x, ./images/tablet/team/team-2_md@2x.jpg 2x" type="image/jpg"> -->
+                            <source media="(min-width: 768px)" srcset="./images/tablet/team/team-2_md.jpg 1x, ./images/tablet/team/team-2_md@2x.jpg 2x" type="image/jpg">
                             <source media="(max-width: 767px)" srcset="./images/mobile/team/team-2_sm.jpg 1x, ./images/mobile/team/team-2_sm@2x.jpg 2x" type="image/jpg">
                             <img src="./images/desktop/team/team-2.jpg" alt="Ольга Репина">
                         </picture>
@@ -233,7 +233,7 @@
                     <li class="teammate">
                         <picture>
                             <source media="(min-width: 1200px)" srcset="./images/desktop/team/team-3.jpg" type="image/jpg">
-                            <!-- <source media="(min-width: 768px)" srcset="./images/tablet/team/team-3_md.jpg 1x, ./images/tablet/team/team-3_md@2x.jpg 2x" type="image/jpg"> -->
+                            <source media="(min-width: 768px)" srcset="./images/tablet/team/team-3_md.jpg 1x, ./images/tablet/team/team-3_md@2x.jpg 2x" type="image/jpg">
                             <source media="(max-width: 767px)" srcset="./images/mobile/team/team-3_sm.jpg 1x, ./images/mobile/team/team-3_sm@2x.jpg 2x" type="image/jpg">
                             <img src="./images/desktop/team/team-3.jpg" alt="Николай Тарасов">
                         </picture>
@@ -279,7 +279,7 @@
                     <li class="teammate">
                         <picture>
                             <source media="(min-width: 1200px)" srcset="./images/desktop/team/team-4.jpg" type="image/jpg">
-                            <!-- <source media="(min-width: 768px)" srcset="./images/tablet/team/team-4_md.jpg 1x, ./images/tablet/team/team-4_md@2x.jpg 2x" type="image/jpg"> -->
+                            <source media="(min-width: 768px)" srcset="./images/tablet/team/team-4_md.jpg 1x, ./images/tablet/team/team-4_md@2x.jpg 2x" type="image/jpg">
                             <source media="(max-width: 767px)" srcset="./images/mobile/team/team-4_sm.jpg 1x, ./images/mobile/team/team-4_sm@2x.jpg 2x" type="image/jpg">
                             <img src="./images/desktop/team/team-4.jpg" alt="Михаил Ермаков">
                         </picture>
