--- a/index.html
+++ b/index.html
@@ -115,19 +115,29 @@
                 <ul class="section-about__list list">
                     <li class="section-about__item">
                         <div class="section-about__overlay">
-                            <img src="./images/desktop/about/img-1.jpg" width="370" height="294" alt="Десктопные приложения" />
+                            <picture>
+                                <source media="(min-width: 1200px)" srcset="./images/desktop/about/img-1.jpg 1x, ./images/desktop/about/img-1@2x.jpg 2x" type="image/jpg">          
+                                <img src="./images/desktop/about/img-1.jpg" width="370" height="294" alt="Десктопные приложения" />
+                            </picture>
                             <p class="section-about__description">Десктопные приложения</p>
                         </div>
                     </li>
                     <li class="section-about__item">
                         <div class="section-about__overlay">
-                            <img src="./images/desktop/about/img-2.jpg" width="370" height="294" alt="Мобильные приложения" />
+                            <picture>
+                                <source media="(min-width: 1200px)" srcset="./images/desktop/about/img-2.jpg 1x, ./images/desktop/about/img-2@2x.jpg 2x" type="image/jpg">          
+                                <img src="./images/desktop/about/img-2.jpg" width="370" height="294" alt="Мобильные приложения" />
+                            </picture>
                             <p class="section-about__description">Мобильные приложения</p>
                         </div>
                     </li>
                     <li class="section-about__item">
-                        <div class="section-about__overlay">
+                        <div class="section-about__overlay">  
+                        <picture>
+                            <source media="(min-width: 1200px)" srcset="./images/desktop/about/img-3.jpg 1x, ./images/desktop/about/img-3@2x.jpg 2x" type="image/jpg">
                             <img src="./images/desktop/about/img-3.jpg" width="370" height="294" alt="Дизайнерские решения" />
+                        </picture>
+                            
                             <p class="section-about__description">Дизайнерские решения</p>
                         </div>
                     </li>
@@ -140,7 +150,7 @@
                 <ul class="section-team__list list">
                     <li class="teammate">
                         <picture>
-                            <source media="(min-width: 1200px)" srcset="./images/desktop/team/team-1.jpg" type="image/jpg">
+                            <source media="(min-width: 1200px)" srcset="./images/desktop/team/team-1.jpg 1x, ./images/desktop/team/team-1@2x.jpg 2x" type="image/jpg">
                             <source media="(min-width: 768px)" srcset="./images/tablet/team/team-1_md.jpg 1x, ./images/tablet/team/team-1_md@2x.jpg 2x" type="image/jpg">
                             <source media="(max-width: 767px)" srcset="./images/mobile/team/team-1_sm.jpg 1x, ./images/mobile/team/team-1_sm@2x.jpg 2x" type="image/jpg">
                             <img src="./images/desktop/team/team-1.jpg" alt="Игорь Демьяненко">
@@ -186,7 +196,7 @@
                     </li>
                     <li class="teammate">
                         <picture>
-                            <source media="(min-width: 1200px)" srcset="./images/desktop/team/team-2.jpg" type="image/jpg">
+                            <source media="(min-width: 1200px)" srcset="./images/desktop/team/team-2.jpg 1x, ./images/desktop/team/team-2@2x.jpg 2x" type="image/jpg">
                             <source media="(min-width: 768px)" srcset="./images/tablet/team/team-2_md.jpg 1x, ./images/tablet/team/team-2_md@2x.jpg 2x" type="image/jpg">
                             <source media="(max-width: 767px)" srcset="./images/mobile/team/team-2_sm.jpg 1x, ./images/mobile/team/team-2_sm@2x.jpg 2x" type="image/jpg">
                             <img src="./images/desktop/team/team-2.jpg" alt="Ольга Репина">
@@ -232,7 +242,7 @@
                     </li>
                     <li class="teammate">
                         <picture>
-                            <source media="(min-width: 1200px)" srcset="./images/desktop/team/team-3.jpg" type="image/jpg">
+                            <source media="(min-width: 1200px)" srcset="./images/desktop/team/team-3.jpg 1x, ./images/desktop/team/team-3@2x.jpg 2x" type="image/jpg">
                             <source media="(min-width: 768px)" srcset="./images/tablet/team/team-3_md.jpg 1x, ./images/tablet/team/team-3_md@2x.jpg 2x" type="image/jpg">
                             <source media="(max-width: 767px)" srcset="./images/mobile/team/team-3_sm.jpg 1x, ./images/mobile/team/team-3_sm@2x.jpg 2x" type="image/jpg">
                             <img src="./images/desktop/team/team-3.jpg" alt="Николай Тарасов">
@@ -278,7 +288,7 @@
                     </li>
                     <li class="teammate">
                         <picture>
-                            <source media="(min-width: 1200px)" srcset="./images/desktop/team/team-4.jpg" type="image/jpg">
+                            <source media="(min-width: 1200px)" srcset="./images/desktop/team/team-4.jpg 1x, ./images/desktop/team/team-4@2x.jpg 2x" type="image/jpg">
                             <source media="(min-width: 768px)" srcset="./images/tablet/team/team-4_md.jpg 1x, ./images/tablet/team/team-4_md@2x.jpg 2x" type="image/jpg">
                             <source media="(max-width: 767px)" srcset="./images/mobile/team/team-4_sm.jpg 1x, ./images/mobile/team/team-4_sm@2x.jpg 2x" type="image/jpg">
                             <img src="./images/desktop/team/team-4.jpg" alt="Михаил Ермаков">
