--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
                             <div class="overlay">
                                 <div class="overlay__thumb">
                                     <picture>
-                                        <source media="(min-width: 1200px)" srcset="./images/desktop/works/img-1.jpg" type="image/jpg">
+                                        <source media="(min-width: 1200px)" srcset="./images/desktop/works/img-1.jpg 1x, ./images/desktop/works/img-1.jpg 2x" type="image/jpg">
                                         <source media="(min-width: 768px)" srcset="./images/tablet/works/portfolio-1_md.jpg 1x, ./images/tablet/works/portfolio-1_md@2x.jpg 2x" type="image/jpg">
                                         <source media="(max-width: 767px)" srcset="./images/mobile/works/portfolio-1_sm.jpg 1x, ./images/mobile/works/portfolio-1_sm@2x.jpg 2x" type="image/jpg">
                                         <img src="./images/desktop/works/img-1.jpg" alt="Технокряк">
@@ -93,7 +93,7 @@
                             <div class="overlay">
                                 <div class="overlay__thumb">
                                     <picture>
-                                        <source media="(min-width: 1200px)" srcset="./images/desktop/works/img-2.jpg" type="image/jpg">
+                                        <source media="(min-width: 1200px)" srcset="./images/desktop/works/img-2.jpg 1x, ./images/desktop/works/img-2.jpg 2x" type="image/jpg">
                                         <source media="(min-width: 768px)" srcset="./images/tablet/works/portfolio-2_md.jpg 1x, ./images/tablet/works/portfolio-2_md@2x.jpg 2x" type="image/jpg">
                                         <source media="(max-width: 767px)"
                                             srcset="./images/mobile/works/portfolio-2_sm.jpg 1x, ./images/mobile/works/portfolio-2_sm@2x.jpg 2x"
@@ -119,7 +119,7 @@
                             <div class="overlay">
                                 <div class="overlay__thumb">
                                     <picture>
-                                        <source media="(min-width: 1200px)" srcset="./images/desktop/works/img-3.jpg" type="image/jpg">
+                                        <source media="(min-width: 1200px)" srcset="./images/desktop/works/img-3.jpg 1x, ./images/desktop/works/img-3.jpg 2x" type="image/jpg">
                                         <source media="(min-width: 768px)" srcset="./images/tablet/works/portfolio-3_md.jpg 1x, ./images/tablet/works/portfolio-3_md@2x.jpg 2x" type="image/jpg">
                                         <source media="(max-width: 767px)"
                                             srcset="./images/mobile/works/portfolio-3_sm.jpg 1x, ./images/mobile/works/portfolio-3_sm@2x.jpg 2x"
@@ -146,7 +146,7 @@
                             <div class="overlay">
                                 <div class="overlay__thumb">
                                     <picture>
-                                        <source media="(min-width: 1200px)" srcset="./images/desktop/works/img-4.jpg" type="image/jpg">
+                                        <source media="(min-width: 1200px)" srcset="./images/desktop/works/img-4.jpg 1x, ./images/desktop/works/img-4.jpg 2x" type="image/jpg">
                                         <source media="(min-width: 768px)" srcset="./images/tablet/works/portfolio-4_md.jpg 1x, ./images/tablet/works/portfolio-4_md@2x.jpg 2x" type="image/jpg">
                                         <source media="(max-width: 767px)"
                                             srcset="./images/mobile/works/portfolio-4_sm.jpg 1x, ./images/mobile/works/portfolio-4_sm@2x.jpg 2x"
@@ -172,7 +172,7 @@
                             <div class="overlay">
                                 <div class="overlay__thumb">
                                     <picture>
-                                        <source media="(min-width: 1200px)" srcset="./images/desktop/works/img-5.jpg" type="image/jpg">
+                                        <source media="(min-width: 1200px)" srcset="./images/desktop/works/img-5.jpg 1x, ./images/desktop/works/img-5.jpg 2x" type="image/jpg">
                                         <source media="(min-width: 768px)" srcset="./images/tablet/works/portfolio-5_md.jpg 1x, ./images/tablet/works/portfolio-5_md@2x.jpg 2x" type="image/jpg">
                                         <source media="(max-width: 767px)"
                                             srcset="./images/mobile/works/portfolio-5_sm.jpg 1x, ./images/mobile/works/portfolio-5_sm@2x.jpg 2x"
@@ -198,7 +198,7 @@
                             <div class="overlay">
                                 <div class="overlay__thumb">
                                     <picture>
-                                        <source media="(min-width: 1200px)" srcset="./images/desktop/works/img-6.jpg" type="image/jpg">
+                                        <source media="(min-width: 1200px)" srcset="./images/desktop/works/img-6.jpg 1x, ./images/desktop/works/img-6.jpg 2x" type="image/jpg">
                                         <source media="(min-width: 768px)" srcset="./images/tablet/works/portfolio-6_md.jpg 1x, ./images/tablet/works/portfolio-6_md@2x.jpg 2x" type="image/jpg">
                                         <source media="(max-width: 767px)"
                                             srcset="./images/mobile/works/portfolio-6_sm.jpg 1x, ./images/mobile/works/portfolio-6_sm@2x.jpg 2x"
@@ -224,7 +224,7 @@
                             <div class="overlay">
                                 <div class="overlay__thumb">
                                     <picture>
-                                        <source media="(min-width: 1200px)" srcset="./images/desktop/works/img-7.jpg" type="image/jpg">
+                                        <source media="(min-width: 1200px)" srcset="./images/desktop/works/img-7.jpg 1x, ./images/desktop/works/img-7.jpg 2x" type="image/jpg">
                                         <source media="(min-width: 768px)" srcset="./images/tablet/works/portfolio-7_md.jpg 1x, ./images/tablet/works/portfolio-7_md@2x.jpg 2x" type="image/jpg">
                                         <source media="(max-width: 767px)"
                                             srcset="./images/mobile/works/portfolio-7_sm.jpg 1x, ./images/mobile/works/portfolio-7_sm@2x.jpg 2x"
@@ -250,7 +250,7 @@
                             <div class="overlay">
                                 <div class="overlay__thumb">
                                     <picture>
-                                        <source media="(min-width: 1200px)" srcset="./images/desktop/works/img-8.jpg" type="image/jpg">
+                                        <source media="(min-width: 1200px)" srcset="./images/desktop/works/img-8.jpg 1x, ./images/desktop/works/img-8.jpg 2x" type="image/jpg">
                                         <source media="(min-width: 768px)" srcset="./images/tablet/works/portfolio-8_md.jpg 1x, ./images/tablet/works/portfolio-8_md@2x.jpg 2x" type="image/jpg">
                                         <source media="(max-width: 767px)"
                                             srcset="./images/mobile/works/portfolio-8_sm.jpg 1x, ./images/mobile/works/portfolio-8_sm@2x.jpg 2x"
@@ -276,7 +276,7 @@
                             <div class="overlay">
                                 <div class="overlay__thumb">
                                     <picture>
-                                        <source media="(min-width: 1200px)" srcset="./images/desktop/works/img-9.jpg" type="image/jpg">
+                                        <source media="(min-width: 1200px)" srcset="./images/desktop/works/img-9.jpg 1x, ./images/desktop/works/img-9.jpg 2x" type="image/jpg">
                                         <source media="(min-width: 768px)" srcset="./images/tablet/works/portfolio-9_md.jpg 1x, ./images/tablet/works/portfolio-9_md@2x.jpg 2x" type="image/jpg">
                                         <source media="(max-width: 767px)"
                                             srcset="./images/mobile/works/portfolio-9_sm.jpg 1x, ./images/mobile/works/portfolio-9_sm@2x.jpg 2x"
